Fix char not displaying on mobile

--- a/dev/stylesheets/styles.css
+++ b/dev/stylesheets/styles.css
@@ -46,7 +46,7 @@ p, ul, ol, table, dl {
 
 h1, h2, h3 {
   line-height:1.3;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 h1,h2, h3 {
@@ -77,8 +77,7 @@ a, h1 span {
 }
 
 a:hover {
-  background: #8cc63f;
-  color: white;
+  color: #e91d25;
   transition: background 0.3s, color 0.3s, box-shadow 0.3s;
 }
 
@@ -330,6 +329,15 @@ a.register {
   box-shadow: 4px 4px rgba(0,0,0,0.3);
 }
 
+a.register strong {
+  font-size: 120%;
+}
+
+a.register:hover {
+  background: white;
+  color: #e91d25;
+}
+
 a.buttons {
   -webkit-font-smoothing: antialiased;
   background: url(../images/arrow-down.png) no-repeat;
@@ -400,6 +408,9 @@ a.buttons:hover {
     color: #0b334e;
     position: absolute;
     right: 1em;
+  }
+  nav a:hover:after {
+    color: white;
   }
 }
 
